kubernetes/apps/security/authentik/forward-auth/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${AUTHENTIK_PROXY_HOST//./-}-authentik
  namespace: security
spec:
  ingressClassName: "${INGRESS_CLASS:=internal}"
  rules:
    - host: &host "${AUTHENTIK_PROXY_HOST:=authentik}"
      http:
        paths:
          - pathType: Prefix
            path: "/outpost.goauthentik.io"
            backend:
              service:
                name: authentik-proxy
                port:
                  name: proxy
  tls:
    - hosts:
        - *host
